--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
 
             - name: Install gcc
               if: matrix.compiler.name == 'clang'
-              run: sudo apt-get install -y gcc-12
+              run: sudo apt-get install -y gcc-12 g++-12
 
             - name: Install clang
               if: matrix.compiler.name == 'clang'
