--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,9 +140,11 @@ jobs:
               run: |
                   git status
                   # sudo apt-get update
-                  sudo apt-get install libgsl-dev
+                  sudo apt-get install -y gcc-11 g++-11
                   # sudo apt-get install clang
+                  sudo apt-get install -y libgsl-dev
                   sudo apt install -y openmpi-bin libopenmpi-dev
+                  export OMPI_CXX=g++-11
 
             - name: CPU count
               id: cpu-count
