--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -139,8 +139,8 @@ jobs:
               if: matrix.os != 'selfhosted'
               run: |
                   git status
-                  # sudo apt-get update
-                  sudo apt-get install -y gcc-11 g++-11
+                  sudo apt-get update
+                  # sudo apt-get install -y gcc-11 g++-11
                   sudo apt-get install -y libgsl-dev
                   sudo apt install -y openmpi-bin libopenmpi-dev
                   sudo apt-get install -y clang-12 --install-suggests
