--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,12 @@ jobs:
                   source /opt/intel/oneapi/setvars.sh
                   printenv >> $GITHUB_ENV
 
+            - name: Install Intel MPI
+              if: matrix.compiler.name == 'intel' && matrix.mpi == 'ON'
+              run: |
+                  sudo apt-get install -y intel-oneapi-mpi
+                  sudo apt-get install -y intel-oneapi-mpi-devel
+
             - name: install openmpi
               if: matrix.mpi == 'ON' && matrix.compiler.name != 'intel'
               run: |
@@ -105,16 +111,11 @@ jobs:
 
             - name: Set compiler environment variables (MPI off)
               if: matrix.mpi == 'OFF'
-              uses: allenevans/set-env@v2.0.0
-              with:
-                  CXX: ${{ matrix.compiler.cmd }}
+              run: echo "CXX=${{ matrix.compiler.cmd }}"" >> $GITHUB_ENV
 
             - name: Set compiler environment variables (MPI on)
               if: matrix.mpi == 'ON'
-              uses: allenevans/set-env@v2.0.0
-              with:
-                  OMPI_CXX: ${{ matrix.compiler.cmd }}
-                  CXX: mpicxx
+              run: echo "OMPI_CXX=${{ matrix.compiler.cmd }}" >> $GITHUB_ENV echo "CXX=mpicxx" >> $GITHUB_ENV
 
             - name: Show compiler version
               run: |
