--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,10 @@ on:
     push:
         branches-ignore:
             - classic*
-  # pull_request:
-  #   branches:
-  #   - nebular*
-  #   - main
+    # pull_request:
+    #   branches:
+    #   - nebular*
+    #   - main
 
 env:
     ASAN_OPTIONS: detect_stack_use_after_return=1:detect_leaks=0
@@ -46,15 +46,15 @@ jobs:
                   clang-format-version: '14'
                   check-path: .
 
-    compilematrix:
+    compile:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                compiler: [{name: gcc, cmd: g++-11}, {name: clang, cmd: clang++}] # {name: intel, cmd: icpc}
+                compiler: [{name: gcc, cmd: g++-11}, {name: clang, cmd: clang++}]     # {name: intel, cmd: icpc}
                 mpi: [ON, OFF]
             fail-fast: false
 
-        name: Compile ${{ matrix.compiler.name }} MPI ${{ matrix.mpi }}
+        name: Compile with ${{ matrix.compiler.name }} MPI ${{ matrix.mpi }}
         steps:
             - uses: actions/checkout@v3
 
@@ -123,7 +123,7 @@ jobs:
               run: |
                   ${{ env.CXX }} --version
 
-            - name: compile
+            - name: Compile
               run: |
                   for aofile in artisoptions_*.h; do
                     echo $aofile
@@ -135,7 +135,7 @@ jobs:
     testmodels:
         strategy:
             matrix:
-        # os: ['ubuntu-latest', 'self-hosted']
+                # os: ['ubuntu-latest', 'self-hosted']
                 os: [ubuntu-latest]
                 testmode: [OFF, ON]
                 testname: [classicmode, nebularonezone]
@@ -164,11 +164,11 @@ jobs:
               id: cpu-count
               run: echo "::set-output name=count::$(python3 -c 'import multiprocessing; print(multiprocessing.cpu_count())')"
 
-      # we can cache this, but then we don't test the code that generates ratecoeff.dat
+            # we can cache this, but then we don't test the code that generates ratecoeff.dat
             - name: Cache ratecoeff.dat
               if: matrix.testname == 'classicmode'
               uses: actions/cache@v3
-        # if: matrix.testmode != 'ON'
+              # if: matrix.testmode != 'ON'
               with:
                   path: tests/${{ matrix.testname }}_testrun/ratecoeff.dat
                   key: tests/${{ matrix.testname }}_testrun/ratecoeff.dat
