--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                compiler: [{name: gcc, cmd: g++-11}, {name: clang, cmd: clang++}]     # {name: intel, cmd: icpc}
+                compiler: [{name: gcc, cmd: g++-11}, {name: clang, cmd: clang++}]
                 mpi: [ON, OFF]
             fail-fast: false
 
@@ -75,34 +75,8 @@ jobs:
               run: |
                   sudo apt-get install -y clang-12 --install-suggests
 
-            - name: Install Intel oneAPI
-              if: matrix.compiler.name == 'intel'
-              run: |
-                  # wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
-                  # sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
-                  # rm GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
-                  # sudo echo "deb https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
-
-                  # sudo apt-get install -y intel-oneapi-common-vars
-                  # sudo apt-get install -y intel-oneapi-mpi
-                  # sudo apt-get install -y intel-oneapi-mpi-devel
-
-                  wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
-                  sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
-                  echo "deb https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
-                  sudo apt-get update -o Dir::Etc::sourcelist="sources.list.d/oneAPI.list" -o APT::Get::List-Cleanup="0"
-                  sudo apt-get install -y intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic
-                  source /opt/intel/oneapi/setvars.sh
-                  printenv >> $GITHUB_ENV
-
-            - name: Install Intel MPI
-              if: matrix.compiler.name == 'intel' && matrix.mpi == 'ON'
-              run: |
-                  sudo apt-get install -y intel-oneapi-mpi
-                  sudo apt-get install -y intel-oneapi-mpi-devel
-
             - name: install openmpi
-              if: matrix.mpi == 'ON' && matrix.compiler.name != 'intel'
+              if: matrix.mpi == 'ON'
               run: |
                   sudo apt install -y openmpi-bin libopenmpi-dev
 
@@ -155,8 +129,7 @@ jobs:
               run: |
                   git status
                   sudo apt-get update
-                  # sudo apt-get install -y gcc-11 g++-11
-                  # sudo apt-get install -y clang-12 --install-suggests
+                  sudo apt-get install -y gcc-11 g++-11
                   sudo apt-get install -y libgsl-dev
                   sudo apt install -y openmpi-bin libopenmpi-dev
 
