--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,10 +129,10 @@ jobs:
               run: |
                   git status
                   sudo apt-get update
-                  sudo apt-get install -y gcc-12 g++-12
+                  #sudo apt-get install -y gcc-12 g++-12
                   sudo apt-get install -y libgsl-dev
                   sudo apt install -y openmpi-bin libopenmpi-dev
-                  echo "OMPI_CXX=g++-12" >> $GITHUB_ENV
+                  #echo "OMPI_CXX=g++-12" >> $GITHUB_ENV
 
             - name: CPU count
               id: cpu-count
